tests/circularity/out.txt
error: circularity: '23 in '24 -> '23
  ┌─ err.sml:1:11
  │
1 │ fun f _ = f
  │           ^

typechecking failed
